[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "promptfrisk"
version = "0.1.0"
description = "Frisk the LLM boundary: scan inputs and outputs for prompt injection, PII, secrets, and risky tool calls."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Timur Dzhigkaev" }]
keywords = [
    "llm",
    "security",
    "guardrails",
    "prompt-injection",
    "pii",
    "redaction",
    "secrets",
    "ai-safety",
    "jailbreak",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

# Core library has ZERO runtime dependencies (pure stdlib). The CLI extra adds
# click + rich for a nicer terminal experience.
dependencies = []

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "rich>=13.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.scripts]
promptfrisk = "promptfrisk.cli:main"

[project.urls]
Repository = "https://github.com/dzhigkaev/promptfrisk"
Issues = "https://github.com/dzhigkaev/promptfrisk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/promptfrisk"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
